--- a/mqo_exercises/views/partner.xml
+++ b/mqo_exercises/views/partner.xml
@@ -31,6 +31,7 @@
 	                        <tree string="Assignments">
 	                        	<field name="exercise_id"/>
 	                            <field name="rating"/>
+	                            <field name="datetime_allocated"/>
 	                        </tree>
 	                    </field>
 	                </page>
