--- a/mqo_exercises/views/exercises.xml
+++ b/mqo_exercises/views/exercises.xml
@@ -321,7 +321,7 @@
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
             <field name="help" type="html">
-                <p class="oe_view_nocontent_create">Create the first exercise boost
+                <p class="oe_view_nocontent_create">Create the first prerequisite exercise
                 </p>
             </field>
         </record>
