--- a/mqo_exercises/templates/templates.xml
+++ b/mqo_exercises/templates/templates.xml
@@ -1,6 +1,6 @@
 <openerp>
     <data>
-	    <template id="index">
+	    <template id="mqo.index">
             <t t-call="website.layout">
                 <t t-set="title">My learning</t>
                 <div class="oe_structure">
