--- a/mqo_exercises/templates/templates.xml
+++ b/mqo_exercises/templates/templates.xml
@@ -8,8 +8,10 @@
 				        <t t-foreach="exercises" t-as="exercise">
 				          <p><t t-esc="exercise.id"/> <t t-esc="exercise.name"/></p>
 				          <p><t t-esc="exercise.instructions"/></p>
-				          <p><t t-esc="exercise.response_survey.id"/></p>
-				          <p><t t-esc="exercise.response_token"/></p>
+				          <t t-if="exercise.response_survey">
+					          <p><t t-esc="exercise.response_survey.id"/></p>
+					          <p><t t-esc="exercise.response_token"/></p>
+					      </t>
 				        </t>
 				  	</div>
 				</div>
