Bugfixing survey view.

--- a/mqo_exercises/views/survey.xml
+++ b/mqo_exercises/views/survey.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
     <data>
-        <template id="mqo_survey_form" inherit_id="survey.survey_form">
+        <template id="mqo_survey_form" inherit_id="survey_form">
             <xpath expr="//page[@string='Select Options']" position="inside">
                 <group>
                     <field name="name"/>
