--- a/mqo_exercises/views/survey.xml
+++ b/mqo_exercises/views/survey.xml
@@ -8,7 +8,7 @@
             <field name="arch" type="xml">
 	            <xpath expr="//page[@string='Select Options']" position="inside">
 	                <group>
-	                    <field name="name"/>
+	                    <field name="group"/>
 	                </group>
 	            </xpath>
 	        </field>
