--- a/mqo_strengths/templates/templates.xml
+++ b/mqo_strengths/templates/templates.xml
@@ -18,10 +18,11 @@
 		        <section class="oe_snippet_body mt16 mb16">
 		            <div class="container">
 		                <div class="row">
-		                    <div class="col-md-12 text-center mt16 mb32">
-		                        <h2>#<t t-esc="strength.seq_num"/>: <t t-esc="strength.title"/> (<t t-esc="strength.value"/>)</h2>
+		                    <div class="col-md-8 col-md-offset-2 text-center mt16 mb16">
+		                        <h2>#<t t-esc="strength.seq_num"/>: <t t-esc="strength.title"/></h2>
+		                        <h3 class="text-muted">(<t t-esc="'{:.2f}'.format(strength.value)"/>)</h3>
 		                    </div>
-		                    <div class="col-md-12 mb16 mt16">
+		                    <div class="col-md-8 col-md-offset-2 mb32 mt16">
 		                        <p><t t-esc="strength.text"/></p>
 		                    </div>
 		                </div>
