--- a/mqo_strengths/templates/templates.xml
+++ b/mqo_strengths/templates/templates.xml
@@ -19,11 +19,11 @@
 		            <div class="container">
 		                <div class="row">
 		                    <div class="col-md-8 col-md-offset-2 text-center mt16 mb16">
-		                        <h2>#<t t-esc="strength.seq_num"/>: <t t-esc="strength.title"/></h2>
-		                        <h3 class="text-muted">(<t t-esc="'{:.2f}'.format(strength.value)"/>)</h3>
+		                        <h2>#<t t-esc="strength['seq_num']"/>: <t t-esc="strength['title']"/></h2>
+		                        <h3 class="text-muted">(<t t-esc="'{:.2f}'.format(strength['value'])"/>)</h3>
 		                    </div>
 		                    <div class="col-md-8 col-md-offset-2 mb32 mt16">
-		                        <p><t t-esc="strength.text"/></p>
+		                        <p><t t-esc="strength['text']"/></p>
 		                    </div>
 		                </div>
 		            </div>
