--- a/mqo_strengths/templates/templates.xml
+++ b/mqo_strengths/templates/templates.xml
@@ -30,5 +30,16 @@
 		        </section>
 		    </div>
 	    </template>
+	    
+	    <template id="sfinished" inherit_id="survey.sfinished" name="Survey finished">
+	        <xpath expr="//div[@t-field='survey.thank_you_message']" position="after">
+	            <t t-if="survey.title=='Discover your strengths'">
+	            	<div class="mt16 mb16">
+	            		<a class="btn btn-primary btn-lg" t-att-href="'/mystrengths/%s' % (token)">See your strengths</a>
+	            	</div>
+	            </t>
+	        </xpath>
+	    </template>
+    
     </data>
 </openerp>
