--- a/mqo_strengths/templates/templates.xml
+++ b/mqo_strengths/templates/templates.xml
@@ -1,10 +1,18 @@
 <openerp>
     <data>
+    <template id="assets_frontend_result" inherit_id="website.assets_frontend" name="Survey Results assets">
+        <xpath expr="." position="inside">
+            <script type="text/javascript" src="/mqo_strengths/static/src/js/strengths_result.js" />
+        </xpath>
+    </template>
 	    <template id="results">
             <t t-call="website.layout">
                 <t t-set="title">My learning</t>
                 <div class="oe_structure">
                     <div class="container">
+                    	<div name="d3bar" class="mt32 mb32" t-att-d3data="d3data">
+                    		<svg style='height:500px'> </svg>
+                    	</div>
 				        <t t-foreach="strengths" t-as="strength">
 				          <t t-call="mqo_strengths.strength_snippet"></t>
 				        </t>
@@ -15,19 +23,17 @@
 
 	    <template id="strength_snippet">
 		    <div>
-		        <section class="oe_snippet_body mt16 mb16">
-		            <div class="container">
-		                <div class="row">
-		                    <div class="col-md-8 col-md-offset-2 text-center mt16 mb16">
-		                        <h2>#<t t-esc="strength['seq_num']"/>: <t t-esc="strength['title']"/></h2>
-		                        <h3 class="text-muted">(<t t-esc="'{:.2f}'.format(strength['value'])"/>)</h3>
-		                    </div>
-		                    <div class="col-md-8 col-md-offset-2 mb32 mt16">
-		                        <p><t t-esc="strength['text']"/></p>
-		                    </div>
-		                </div>
-		            </div>
-		        </section>
+	            <div class="container">
+	                <div class="row">
+	                    <div class="col-md-8 col-md-offset-2 text-center mt16 mb16">
+	                        <h2>#<t t-esc="strength['seq_num']"/>: <t t-esc="strength['title']"/></h2>
+	                        <h3 class="text-muted">(<t t-esc="'{:.2f}'.format(strength['value'])"/>)</h3>
+	                    </div>
+	                    <div class="col-md-8 col-md-offset-2 mb32 mt16">
+	                        <p><t t-esc="strength['text']"/></p>
+	                    </div>
+	                </div>
+	            </div>
 		    </div>
 	    </template>
 	    
