--- a/mqo_exercises/views/learner.xml
+++ b/mqo_exercises/views/learner.xml
@@ -2,10 +2,10 @@
  <openerp>
     <data>
         <!-- Add instructor field to existing view -->
-        <record model="ir.ui.view" id="partner_exercises_form_view">
-            <field name="name">partner.exercises</field>
-            <field name="model">res.partner</field>
-            <field name="inherit_id" ref="base.view_partner_form"/>
+        <record model="ir.ui.view" id="learner_exercises_form_view">
+            <field name="name">learner.exercises</field>
+            <field name="model">mqo.learner</field>
+            <field name="inherit_id" ref="mqo_learner.learner_form_view"/>
             <field name="arch" type="xml">
                 <notebook position="inside">
 	                <page string="Next Exercise">
@@ -38,16 +38,5 @@
                 </notebook>
             </field>
         </record>
-
-        <record model="ir.actions.act_window" id="contact_list_action">
-            <field name="name">Contacts</field>
-            <field name="res_model">res.partner</field>
-            <field name="view_mode">tree,form</field>
-        </record>
-        <menuitem id="configuration_menu" name="Configuration"
-                  parent="main_learn_menu"/>
-        <menuitem id="contact_menu" name="Contacts"
-                  parent="configuration_menu"
-                  action="contact_list_action"/>
     </data>
 </openerp>
