--- a/mqo_exercises/templates/templates.xml
+++ b/mqo_exercises/templates/templates.xml
@@ -39,6 +39,9 @@
 					<div class="portlet-body">
 						<h4><t t-esc="exercise.name"/></h4>
 						<p><t t-esc="exercise.instructions"/></p>
+						<div class="mt16 text-center">
+							<a href="/exercise/response" class="btn btn-default mb32"><span class="fa fa-long-arrow-right"/> <span class="hidden-xs">Log how it went</span><span class="visible-xs-inline">Log how it went</span></a>
+						</div>
 				    </div>
 				  </div>
     	 	    </div>
