--- a/mqo_exercises/templates/templates.xml
+++ b/mqo_exercises/templates/templates.xml
@@ -14,42 +14,46 @@
             <t t-foreach="assignments[0]" t-as="assignment">
               <div class="row">
               	<div class="col-md-6 col-md-offset-3 mb32 mt32">
-				  <div class="portlet">
-					<div class="portlet-title">
-						<div class="caption">
-							<i class="glyphicon glyphicon-calendar"></i>
-							<span class="caption-subject text-uppercase"> Your exercise</span>
-							<span class="caption-helper">143 likes this week...</span>
-						</div>
-						<div class="actions">
-							<a href="javascript:;" class="btn">
-								<i class="glyphicon glyphicon-pencil"></i>
-								Edit 
-							</a>
-							<a href="javascript:;" class="btn">
-								<i class="glyphicon glyphicon-thumbs-up"></i>
-								Like
-							</a>
-							<a href="javascript:;" class="btn">
-								<i class="glyphicon glyphicon-step-forward"></i>
-								Skip
-							</a>
-						</div>
-					</div>
-					<div class="portlet-body">
-						<h4><t t-esc="assignment.exercise_id.name"/></h4>
-						<p><t t-esc="assignment.exercise_id.instructions"/></p>
-						<div class="mt16 text-center">
-							<a t-att-href="'/exercise/response/%s/%s' % (slug(assignment), assignment.response_token)" class="btn btn-primary btn-lg mb32"><span class="fa fa-long-arrow-right"/> <span class="hidden-xs">Log how it went</span><span class="visible-xs-inline">Log how it went</span></a>
-						</div>
-				    </div>
-				  </div>
+				  <t t-call="mqo_exercise.exercise_portlet"></t>
     	 	    </div>
   			  </div>
 		    </t>
 	  	  </div>
 	    </div>
 	  </t>    
+	</template>
+	
+	<template id="exercise_portlet">
+	  <div class="portlet">
+		<div class="portlet-title">
+			<div class="caption">
+				<i class="glyphicon glyphicon-calendar"></i>
+				<span class="caption-subject text-uppercase"> Your exercise</span>
+				<span class="caption-helper">143 likes this week...</span>
+			</div>
+			<div class="actions">
+				<a href="javascript:;" class="btn">
+					<i class="glyphicon glyphicon-pencil"></i>
+					Edit 
+				</a>
+				<a href="javascript:;" class="btn">
+					<i class="glyphicon glyphicon-thumbs-up"></i>
+					Like
+				</a>
+				<a href="javascript:;" class="btn">
+					<i class="glyphicon glyphicon-step-forward"></i>
+					Skip
+				</a>
+			</div>
+		</div>
+		<div class="portlet-body">
+			<h4><t t-esc="assignment.exercise_id.name"/></h4>
+			<p><t t-esc="assignment.exercise_id.instructions"/></p>
+			<div class="mt16 text-center">
+				<a t-att-href="'/exercise/response/%s/%s' % (slug(assignment), assignment.response_token)" class="btn btn-primary btn-lg mb32"><span class="fa fa-long-arrow-right"/> <span class="hidden-xs">Log how it went</span><span class="visible-xs-inline">Log how it went</span></a>
+			</div>
+	    </div>
+	  </div>
 	</template>
   </data>
 </openerp>
