--- a/mqo_exercises/templates/templates.xml
+++ b/mqo_exercises/templates/templates.xml
@@ -3,6 +3,7 @@
     <template id="assets_frontend_exercise" inherit_id="website.assets_frontend" name="Exercise assets">
         <xpath expr="." position="inside">
         	<link rel='stylesheet' href='/mqo_exercises/static/src/css/portlet.css'/>
+        	<link rel='stylesheet' href='/mqo_exercises/static/src/css/timeline.css'/>
         </xpath>
     </template>
     
@@ -18,6 +19,7 @@
     	 	    </div>
   			  </div>
 		    </t>
+		    <t t-call="mqo_exercises.exercise_timeline">
 	  	  </div>
 	    </div>
 	  </t>    
@@ -54,6 +56,40 @@
 			</div>
 	    </div>
 	  </div>
+	</template>
+	
+	
+	<template id="exercise_timeline">
+		<div class="container">
+		    <div class="page-header">
+		        <h1 id="timeline">Your timeline</h1>
+		    </div>
+		    <ul class="timeline">
+		        <li>
+		          <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+		          <div class="timeline-panel">
+		            <div class="timeline-heading">
+		              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+		              <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
+		            </div>
+		            <div class="timeline-body">
+		              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+		            </div>
+		          </div>
+		        </li>
+		        <li class="timeline-inverted">
+		          <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+		          <div class="timeline-panel">
+		            <div class="timeline-heading">
+		              <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+		            </div>
+		            <div class="timeline-body">
+		              <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+		            </div>
+		          </div>
+		        </li>
+		    </ul>
+		</div>
 	</template>
   </data>
 </openerp>
